Fixed order service DTO error